# light-protocol-simple-counter

./: .gitignore  .prettierignore  Anchor.toml  README.md
app/: const.js  idl.json  package.json  test.js
programs/worlds/: Cargo.toml
programs/worlds/src/: lib.rs
tests/: worlds.ts
